[gd_scene load_steps=15 format=3 uid="uid://dnshaeplewb85"]

[ext_resource type="Script" path="res://Player/Palette/palette.gd" id="1_u6kec"]
[ext_resource type="Material" uid="uid://dji62nmwqftmn" path="res://Player/Palette/palette_colour_shader_material.tres" id="2_albm6"]
[ext_resource type="Texture2D" uid="uid://f3pchl0t3qqp" path="res://Player/Palette/palette_colour_sprite.png" id="3_gdmu7"]
[ext_resource type="PackedScene" uid="uid://cx7w0mo5dqth5" path="res://Player/Palette/palette_colour.tscn" id="4_k5f8u"]
[ext_resource type="Shader" path="res://Player/Palette/palette_colour.gdshader" id="5_8vdy6"]

[sub_resource type="Gradient" id="Gradient_5npyy"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lyo4s"]
gradient = SubResource("Gradient_5npyy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwrpr"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2pjdl"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qe77"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrrhn"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_seosg"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d6jno"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8msia"]
resource_local_to_scene = true
shader = ExtResource("5_8vdy6")
shader_parameter/random_number = null
shader_parameter/timer_progress = 0.0
shader_parameter/modulation = Color(1, 1, 1, 1)

[node name="Palette" type="Node2D"]
script = ExtResource("1_u6kec")

[node name="PaletteFailedShader" type="Sprite2D" parent="."]
visible = false
z_index = 1
material = ExtResource("2_albm6")
position = Vector2(3, 24)
scale = Vector2(2.8125, 1.48438)
texture = SubResource("GradientTexture2D_lyo4s")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_albm6")
position = Vector2(-69, 5)
texture = ExtResource("3_gdmu7")

[node name="PaletteColour0" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_rwrpr")
position = Vector2(-96, 0)

[node name="PaletteColour1" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_2pjdl")

[node name="PaletteColour2" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_1qe77")
position = Vector2(-32, 0)

[node name="PaletteColour3" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_qrrhn")
position = Vector2(0, 0)

[node name="PaletteColour4" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_seosg")
position = Vector2(32, 0)

[node name="PaletteColour5" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_d6jno")
position = Vector2(64, 0)

[node name="PaletteColour6" parent="." instance=ExtResource("4_k5f8u")]
material = SubResource("ShaderMaterial_8msia")
position = Vector2(96, 0)

[node name="PaletteInterface" type="HBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="FailedCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="FailedCooldownTimer" to="." method="_on_failed_cooldown_timer_timeout"]
